[spending] refactor and reorganize test cases